Most Functionality Added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 server.port=8443
-security.enable-csrf=false
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=classpath:certs/domain.pfx
+server.ssl.key-store-password=
+server.ssl.enabled=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/ticketsdb
 spring.datasource.username=
 spring.datasource.password=
@@ -10,3 +13,4 @@ auth.client_id=
 spring.main.allow-circular-references=true
 rsa.private-key: classpath:certs/private.pem
 rsa.public-key: classpath:certs/public.pem
+spring.jackson.serialization.write-dates-as-timestamps=false
