--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8443
 server.ssl.key-store-type=PKCS12
 server.ssl.key-store=classpath:certs/domain.pfx
-server.ssl.key-store-password=
+server.ssl.key-store-password=password
 server.ssl.enabled=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/ticketsdb
 spring.datasource.username=
