--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.ssl.key-store-type=PKCS12
 server.ssl.key-store=classpath:certs/domain.pfx
 server.ssl.key-store-password=password
 server.ssl.enabled=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/ticketsdb
+spring.datasource.url=
 spring.datasource.username=
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -14,3 +14,12 @@ spring.main.allow-circular-references=true
 rsa.private-key: classpath:certs/private.pem
 rsa.public-key: classpath:certs/public.pem
 spring.jackson.serialization.write-dates-as-timestamps=false
+spring.mail.host=
+spring.mail.port=
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.properties.mail.smtp.starttls.enable=true
